--- a/StudentIO/MainWindow.xaml
+++ b/StudentIO/MainWindow.xaml
@@ -5,8 +5,30 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StudentIO"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        Title="Студент ИО" Height="650" Width="1300" MinHeight="650" MinWidth="1300"
+        Icon="/Resources/AdmissionIcon.ico" Background="{StaticResource PaleWhite}"
+        WindowStartupLocation="CenterScreen">
+    <DockPanel>
+
+        <Border BorderBrush="{StaticResource Grey}" BorderThickness="5" Height="120" DockPanel.Dock="Top">
+            <DockPanel>
+                <Image Source="/Resources/AdmissionIcon.png" Margin="10" DockPanel.Dock="Left"/>
+                <StackPanel DockPanel.Dock="Right" VerticalAlignment="Center" Margin="10">
+                    <TextBlock x:Name="txtEmployeeSecondName" TextAlignment="Right"/>
+                    <TextBlock x:Name="txtEmployeeFirstName" TextAlignment="Right"/>
+                    <TextBlock x:Name="txtEmployeeMiddleName" TextAlignment="Right"/>
+                </StackPanel>
+                <TextBlock Text="{Binding Content.Title, ElementName=mainFrame}" TextAlignment="Center"
+                           VerticalAlignment="Center" FontSize="62" FontWeight="Heavy" Foreground="{StaticResource DarkGrey}"/>
+            </DockPanel>
+        </Border>
+
+        <DockPanel x:Name="navigationPanel" Margin="10" DockPanel.Dock="Bottom">
+            <Button x:Name="btExit" Content="Выйти" DockPanel.Dock="Right" Width="250" Click="btExit_Click"/>
+            <Button x:Name="btInfo"  Content="Справочная информация" Click="btInfo_Click"/>
+        </DockPanel>
+
+        <Frame x:Name="mainFrame" Margin="10" Grid.Row="1" NavigationUIVisibility="Hidden"/>
+
+    </DockPanel>
 </Window>
