--- a/StudentIO/Pages/AuthPage.xaml
+++ b/StudentIO/Pages/AuthPage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:StudentIO.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="СТУДЕНТ ИО">
+      Title="АВТОРИЗАЦИЯ">
 
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
         <TextBlock Text="Введите ваш логин и пароль" HorizontalAlignment="Center"/>
