--- a/StudentIO/Pages/OrganisationPage.xaml
+++ b/StudentIO/Pages/OrganisationPage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:StudentIO.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="OrganisationPage">
+      Title="{Binding Content.Title, ElementName=OrganisationFrame, FallbackValue='ОРГАНИЗАЦИЯ'}">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -20,11 +20,16 @@
                 <ColumnDefinition/>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
+                <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Button x:Name="btPersonalFiles" Content="Личные дела" Grid.Column="0"/>
-            <Button x:Name="btGroups" Content="Группы" Grid.Column="1"/>
-            <Button x:Name="btSpecialties" Content="Специальности" Grid.Column="2"/>
-            <Button x:Name="btOrders" Content="Приказы о зачислении" Grid.Column="3"/>
+            
+            <Button x:Name="btPersonalFiles" Content="Личные дела" Grid.Column="0" Click="btPersonalFiles_Click"/>
+            <Button x:Name="btGroups" Content="Группы" Grid.Column="1" Click="btGroups_Click"/>
+            <Button x:Name="btSpecialties" Content="Специальности" Grid.Column="2" Click="btSpecialties_Click"/>
+            <Button x:Name="btOrders" Content="Приказы о зачислении" Grid.Column="3" Click="btOrders_Click"/>
+            <Button x:Name="btEmployees" Content="Сотрудники" Grid.Column="4" Click="btEmployees_Click"/>
+            
         </Grid>
+        <Frame x:Name="OrganisationFrame" Grid.Row="1" NavigationUIVisibility="Hidden" Margin="5"/>
     </Grid>
 </Page>
