--- a/StudentIO/Pages/OrganisationPages/AddAndRedactSpecialityPage.xaml
+++ b/StudentIO/Pages/OrganisationPages/AddAndRedactSpecialityPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="StudentIO.Pages.OrganisationPages.AddAndRedactPage"
+﻿<Page x:Class="StudentIO.Pages.OrganisationPages.AddAndRedactSpecialityPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,8 +6,7 @@
       xmlns:local="clr-namespace:StudentIO.Pages.OrganisationPages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="ИНФОРМАЦИЯ О СОТРУДНИКЕ">
-
+      Title="ИНФОРМАЦИЯ О СПЕЦИАЛЬНОСТИ">
     <Grid VerticalAlignment="Center">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -27,19 +26,18 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="Введите данные новой учетной записи сотрудника организации:" Grid.Column="1" Grid.ColumnSpan="2" Margin="10"
+        <TextBlock Text="Введите данные новой специальности:" Grid.Column="1" Grid.ColumnSpan="2" Margin="10"
                    TextWrapping="Wrap" FontWeight="Bold" TextAlignment="Center"/>
-        <TextBlock Text="Фамилия" Grid.Column="1" Grid.Row="1" Margin="10"/>
-        <TextBlock Text="Имя" Grid.Column="1" Grid.Row="2" Margin="10"/>
-        <TextBlock Text="Отчество" Grid.Column="1" Grid.Row="3" Margin="10"/>
-        <TextBlock Text="Логин" Grid.Column="1" Grid.Row="4" Margin="10"/>
-        <TextBlock Text="Пароль" Grid.Column="1" Grid.Row="5" Margin="10"/>
+        <TextBlock Text="Код специальности" Grid.Column="1" Grid.Row="1" Margin="10"/>
+        <TextBlock Text="Полное наименование" Grid.Column="1" Grid.Row="2" Margin="10"/>
+        <TextBlock Text="Количество курсов" Grid.Column="1" Grid.Row="3" Margin="10"/>
+        <TextBlock Text="Форма обучения" Grid.Column="1" Grid.Row="4" Margin="10"/>
 
-        <TextBox x:Name="tbSecondNameEmployee" Grid.Column="2" Grid.Row="1" Margin="10" MaxLength="50"/>
-        <TextBox x:Name="tbFirstNameEmployee" Grid.Column="2" Grid.Row="2" Margin="10" MaxLength="50"/>
-        <TextBox x:Name="tbMiddleNameEmployee" Grid.Column="2" Grid.Row="3" Margin="10" MaxLength="50"/>
-        <TextBox x:Name="tbLoginEmployee" Grid.Column="2" Grid.Row="4" Margin="10" MaxLength="20"/>
-        <TextBox x:Name="tbPasswordEmployee" Grid.Column="2" Grid.Row="5" Margin="10" MaxLength="20"/>
+        <TextBox x:Name="tbSecondNameEmployee" Grid.Column="2" Grid.Row="1" Margin="10"/>
+        <TextBox x:Name="tbFirstNameEmployee" Grid.Column="2" Grid.Row="2" Margin="10"/>
+        <TextBox x:Name="tbMiddleNameEmployee" Grid.Column="2" Grid.Row="3" Margin="10"/>
+        <TextBox x:Name="tbLoginEmployee" Grid.Column="2" Grid.Row="4" Margin="10"/>
+        <TextBox x:Name="tbPasswordEmployee" Grid.Column="2" Grid.Row="5" Margin="10"/>
 
         <DockPanel Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="6" Margin="5">
             <Button x:Name="btGoBack" DockPanel.Dock="Left" Click="btGoBack_Click">
