--- a/StudentIO/Pages/OrganisationPages/AddAndRedactSpecialityPage.xaml
+++ b/StudentIO/Pages/OrganisationPages/AddAndRedactSpecialityPage.xaml
@@ -10,7 +10,7 @@
     <Grid VerticalAlignment="Center">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
@@ -33,11 +33,10 @@
         <TextBlock Text="Количество курсов" Grid.Column="1" Grid.Row="3" Margin="10"/>
         <TextBlock Text="Форма обучения" Grid.Column="1" Grid.Row="4" Margin="10"/>
 
-        <TextBox x:Name="tbSecondNameEmployee" Grid.Column="2" Grid.Row="1" Margin="10"/>
-        <TextBox x:Name="tbFirstNameEmployee" Grid.Column="2" Grid.Row="2" Margin="10"/>
-        <TextBox x:Name="tbMiddleNameEmployee" Grid.Column="2" Grid.Row="3" Margin="10"/>
-        <TextBox x:Name="tbLoginEmployee" Grid.Column="2" Grid.Row="4" Margin="10"/>
-        <TextBox x:Name="tbPasswordEmployee" Grid.Column="2" Grid.Row="5" Margin="10"/>
+        <TextBox x:Name="tbCodeSpeciality" Grid.Column="2" Grid.Row="1" Margin="10"/>
+        <TextBox x:Name="tbSpecialityFullName" Grid.Column="2" Grid.Row="2" Margin="10"/>
+        <TextBox x:Name="tbEducationDuration" Grid.Column="2" Grid.Row="3" Margin="10"/>
+        <ComboBox x:Name="cmbxFormOfEducation" Grid.Column="2" Grid.Row="4" Margin="10" DisplayMemberPath="FormName"/>
 
         <DockPanel Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="6" Margin="5">
             <Button x:Name="btGoBack" DockPanel.Dock="Left" Click="btGoBack_Click">
