--- a/StudentIO/Pages/SelectionCampain.xaml
+++ b/StudentIO/Pages/SelectionCampain.xaml
@@ -20,6 +20,7 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
 
+            <Button x:Name="btCampain" Content="Приемные кампании" Grid.Column="0" Click="btCampain_Click"/>
             <Button x:Name="btOrders" Content="Приказы о зачислении" Grid.Column="1" Click="btOrders_Click"/>
 
         </Grid>
