--- a/StudentIO/Pages/OrganisationPages/AddAndRedactSpecialityPage.xaml
+++ b/StudentIO/Pages/OrganisationPages/AddAndRedactSpecialityPage.xaml
@@ -33,9 +33,9 @@
         <TextBlock Text="Количество курсов" Grid.Column="1" Grid.Row="3" Margin="10"/>
         <TextBlock Text="Форма обучения" Grid.Column="1" Grid.Row="4" Margin="10"/>
 
-        <TextBox x:Name="tbCodeSpeciality" Grid.Column="2" Grid.Row="1" Margin="10"/>
-        <TextBox x:Name="tbSpecialityFullName" Grid.Column="2" Grid.Row="2" Margin="10"/>
-        <TextBox x:Name="tbEducationDuration" Grid.Column="2" Grid.Row="3" Margin="10"/>
+        <TextBox x:Name="tbCodeSpeciality" Grid.Column="2" Grid.Row="1" Margin="10" MaxLength="20"/>
+        <TextBox x:Name="tbSpecialityFullName" Grid.Column="2" Grid.Row="2" Margin="10" MaxLength="200"/>
+        <TextBox x:Name="tbEducationDuration" Grid.Column="2" Grid.Row="3" Margin="10" MaxLength="1"/>
         <ComboBox x:Name="cmbxFormOfEducation" Grid.Column="2" Grid.Row="4" Margin="10" DisplayMemberPath="FormName"/>
 
         <DockPanel Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="6" Margin="5">
