--- a/StudentIO/Pages/OrganisationPages/EmployeesPage.xaml
+++ b/StudentIO/Pages/OrganisationPages/EmployeesPage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:StudentIO.Pages.OrganisationPages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="СОТРУДНИКИ">
+      Title="СОТРУДНИКИ" IsVisibleChanged="Page_IsVisibleChanged">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -20,7 +20,7 @@
             <TextBox x:Name="tbSearch" ToolTip="Введите для поиска" Margin="5" VerticalAlignment="Center" TextChanged="tbSearch_TextChanged"/>
         </DockPanel>
 
-        <DataGrid Grid.Row="1" AutoGenerateColumns="False" ColumnWidth="*" x:Name="dgEmployees" IsReadOnly="True" CanUserResizeRows="False">
+        <DataGrid Grid.Row="1" ColumnWidth="*" x:Name="dgEmployees">
             <DataGrid.Columns >
                 <DataGridTextColumn Header="Фамилия" Binding="{Binding SecondNameEmployee}"/>
                 <DataGridTextColumn Header="Имя" Binding="{Binding FirstNameEmployee}"/>
