--- a/StudentIO/DataBase/StidentIO1.Context.tt
+++ b/StudentIO/DataBase/StidentIO1.Context.tt
@@ -2,7 +2,7 @@
 <#@ include file="EF6.Utility.CS.ttinclude"#><#@
  output extension=".cs"#><#
 
-const string inputFile = @"StudentIO1.edmx";
+const string inputFile = @"StidentIO1.edmx";
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
 var ef = new MetadataTools(this);
