--- a/StudentIO/Pages/SelectionCampaignPage.xaml
+++ b/StudentIO/Pages/SelectionCampaignPage.xaml
@@ -1,14 +1,13 @@
-﻿<Page x:Class="StudentIO.Pages.SelectionCampaingPages.AddNewSelectionCampaingPage"
+﻿<Page x:Class="StudentIO.Pages.SelectionCampain"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:StudentIO.Pages.SelectionCampaingPages"
+      xmlns:local="clr-namespace:StudentIO.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="AddNewSelectionCampaingPage">
+      Title="{Binding Content.Title, ElementName=SelectionCampaignFrame, FallbackValue='ПРИЕМНАЯ КАМПАНИЯ'}">
 
-    <Grid>
-        
-    </Grid>
+    <Frame x:Name="SelectionCampaignFrame" Grid.Row="1" NavigationUIVisibility="Hidden" Margin="5"/>
+    
 </Page>
