Search for Numbers of campaign

--- a/StudentIO/Pages/SelectionCampaingPages/ControlNumbers.xaml
+++ b/StudentIO/Pages/SelectionCampaingPages/ControlNumbers.xaml
@@ -18,6 +18,11 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
 
+            <DockPanel Grid.Row="0">
+                <Image Height="20" DockPanel.Dock="Left" Source="/Resources/search.png" Margin="5"/>
+                <TextBox x:Name="tbSearch" ToolTip="Введите для поиска" Margin="5" VerticalAlignment="Center" TextChanged="tbSearch_TextChanged"/>
+            </DockPanel>
+
             <TextBlock x:Name="txtDescription" Margin="10" FontSize="18" FontWeight="Bold" TextWrapping="Wrap" TextAlignment="Center"/>
 
             <DataGrid x:Name="dgControlNumbers" Margin="5" Grid.Row="1">
