--- a/StudentIO/Pages/SelectionCampaingPages/AddSelectionCampaing.xaml
+++ b/StudentIO/Pages/SelectionCampaingPages/AddSelectionCampaing.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:StudentIO.Pages.SelectionCampaingPages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="ИНФоРМАЦИЯ О КАМПАНИИ">
+      Title="ИНФОРМАЦИЯ О КАМПАНИИ">
 
     <Grid>
         
